[package]
name = "memoize"
version = "0.1.0"
edition = "2021"

[features]
default = ["std", "test-support"]

std = []

onchain = ["casper-contract/no-std-helpers"]
test-support=["casper-contract/test-support"]

[dependencies]
casper-contract = { version = "1.4.4", default-features = false }
casper-types = { version = "1.5.0" }

[[bin]]
name = "memoize"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
