[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.0"
casper-contract = { version = "1.4.4", default-features = false }
casper-engine-test-support = "3.0.0"
casper-execution-engine = "3.0.0"
casper-types = { version = "1.5.0" }
once_cell = "1.17.1"
serde = "1.0.159"

